k8s/apps/vlsm-calculator/manifests/vlsm-calculator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vlsm-calculator-app
  namespace: vlsm-calculator
  labels:
    app: vlsm-calculator-app
spec:
  selector:
    matchLabels:
      app: vlsm-calculator-app
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vlsm-calculator-app
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: vlsm-calculator-app
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: vlsm-calculator-app
        image: ghcr.io/ilyas-bouktrane/vlsm-calculator:latest
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [ "ALL" ]
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 3000
          name: http
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: vlsm-calculator-app
  namespace: vlsm-calculator
spec:
  selector:
    app: vlsm-calculator-app
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vlsm-calculator-app
  namespace: vlsm-calculator
spec:
  parentRefs:
  - name: external-gateway
    namespace: gateway-system
  - name: internal-gateway
    namespace: gateway-system
  hostnames:
  - vlsm.xako.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vlsm-calculator-app
      port: 3000
